// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:Link:LinkInternal matches the snapshot when format is desktopFooter 1`] = `
.c0 {
  color: #ffffff;
  cursor: pointer;
  font-family: 'Museo Sans Cyrl 500';
  font-weight: 500;
  text-align: center;
  font-size: 18px;
  opacity: 0.6;
  height: 25px;
  margin-left: 140px;
}

<span
  className="c0"
  format="desktopFooter"
/>
`;

exports[`components:Link:LinkInternal matches the snapshot when format is mobileFooter 1`] = `
.c0 {
  color: #ffffff;
  cursor: pointer;
  font-family: 'Museo Sans Cyrl 500';
  font-weight: 500;
  text-align: center;
  font-size: 15px;
  opacity: 0.5;
  height: 18px;
  padding-top: 13px;
}

<span
  className="c0"
  format="mobileFooter"
/>
`;

exports[`components:Link:LinkInternal matches the snapshot when format is mobileHeader 1`] = `
.c0 {
  color: #ffffff;
  cursor: pointer;
  font-family: 'Museo Sans Cyrl 500';
  font-weight: 500;
  text-align: center;
  width: 33px;
  line-height: 2.5;
  font-size: 15px;
  font-weight: 600;
  opacity: 0.5;
  margin-right: 10px;
  margin-left: 30px;
  border-bottom: 2px solid transparent;
}

<span
  className="c0"
  format="mobileHeader"
/>
`;

exports[`components:Link:LinkInternal matches the snapshot when format is tabletFooter 1`] = `
.c0 {
  color: #ffffff;
  cursor: pointer;
  font-family: 'Museo Sans Cyrl 500';
  font-weight: 500;
  text-align: center;
  font-size: 15px;
  opacity: 0.6;
  height: 22px;
  margin-left: 96px;
}

<span
  className="c0"
  format="tabletFooter"
/>
`;
